layout bugs fixed

--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ header{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
     background-color: var(--header-bg);
     color: var(--colors-white);
 }
@@ -91,7 +92,7 @@ header{
 .svg-wrapper svg{
     width: 100%;
     height: 100%;
-    max-height: 540px;
+    max-height: 500px;
     max-width: 400px;
 }
 
